[Test] to solve bug that causes the about me section to be bigger on small screens on the live version of the website

--- a/src/styling/components/_main.scss
+++ b/src/styling/components/_main.scss
@@ -5,6 +5,7 @@ main {
     z-index: 1;
     position: relative;
     background-color: $main-color;
+    background-color: #36A2F1;
 
     .information-container {
         padding: 20px;
